# tfs

./: .gitignore  INSTALL.md  Makefile.am  README  README.md  build.sh  configure.ac
conf/: Makefile.am
scripts/: install_centos6.sh  install_centos7.sh  install_ubuntu.sh  tfs  tfs.sh
src/: Makefile.am
src/adminserver/: Makefile.am
src/checkserver/: Makefile.am  check_manager.h  checkserver.h  default_server_helper.h  service.cpp
src/clientv2/: fsname.cpp  local_key.h  segment_container.h  tair_cache_helper.cpp  tfs_client_impl_v2.cpp  tfs_client_impl_v2.h  tfs_cluster_manager.cpp  tfs_cluster_manager.h  tfs_kv_meta_client_impl.h  tfs_rc_client_api_impl.h  tfs_session.cpp  tfs_session.h  tfs_session_pool.cpp  tfs_session_pool.h
src/common/: Makefile.am  base_http_message.cpp  base_main.cpp  base_main.h  base_object.h  base_packet.cpp  base_packet.h  base_packet_factory.h  base_packet_streamer.h  base_service.cpp  base_service.h  client_manager.cpp  client_manager.h  expire_define.cpp  file_op.cpp  file_opv2.cpp  file_queue.h  file_queue_thread.cpp  file_queue_thread.h  func.cpp  func.h  http_agent.h  http_message_factory.h  http_packet.h  http_packet_streamer.h  internal.cpp  internal.h  kv_rts_define.h  kvengine_helper.cpp  kvengine_helper.h  lock.h  mmap_file.cpp  mmap_file_op.cpp  mmap_file_op.h  new_client.cpp  new_client.h  parameter.cpp  rc_define.cpp  rts_define.h  session_util.cpp  (+5 more)
src/common/mysql_cluster/: Makefile.am  database_pool.h  mysql_database_helper.cpp  mysql_database_helper.h  mysql_engine_helper.cpp
src/dataserver/: Makefile.am  aop_manager.cpp  aop_manager.h  aop_meta.cpp  aop_meta.h  block_checker.cpp  block_checker.h  block_status.h  blockfile_manager.cpp  check_block.cpp  check_block.h  check_manager.h  client_request_server.cpp  client_request_server.h  compact_block.cpp  compact_block.h  data_file.h  data_management.cpp  data_management.h  dataservice.cpp  dataservice.h  ds_define.cpp  erasure_code.cpp  file_repair.cpp  galois.cpp  gc.cpp  gc.h  index_handle.cpp  lease_managerv2.cpp  lease_managerv2.h  migrate_manager.h  mmap_file_op.cpp  mmap_file_op.h  physical_block.cpp  replicate_block.cpp  replicate_block.h  requester.cpp  service.cpp  superblock_impl.cpp  sync_backup.cpp  (+13 more)
src/kv_meta_server/: Makefile.am  kv_meta_heart_manager.cpp  kv_meta_heart_manager.h  kv_meta_server_manager.cpp  kv_meta_server_manager.h  kv_root_server.cpp  service.cpp
src/life_cycle_manager/expire_server/: clean_task_helper.h  expire_heart_manager.cpp  expire_heart_manager.h
src/life_cycle_manager/root_manager/: exp_root_server.cpp  exp_server_manager.cpp  exp_server_manager.h  service.cpp
src/message/: Makefile.am  oplog_sync_message.cpp  read_file_message_v2.h  sync_file_entry_message.cpp
src/migrateserver/: Makefile.am  migrate_manager.h  migrateserver.cpp  migrateserver.h  ms_define.h  service.cpp
src/monitor/: Makefile.am  ha_monitor.cpp  ns_ping.cpp
src/name_meta_server/: database_pool.h  mem_helper.cpp  mem_helper.h  meta_bucket_manager.h  meta_cache_info.h  meta_heart_manager.cpp  meta_heart_manager.h  mysql_database_helper.h
src/nameserver/: Makefile.am  block_collect.cpp  block_id_factory.h  block_manager.h  client_request_server.cpp  client_request_server.h  database_helper.h  gc.cpp  gc.h  global_factory.h  heart_manager.cpp  heart_manager.h  layout_manager.cpp  layout_manager.h  nameserver.cpp  ns_define.h  oplog.cpp  oplog.h  oplog_sync_manager.cpp  oplog_sync_manager.h  server_collect.cpp  server_collect.h  server_manager.h  service.cpp  tair_helper.cpp  tair_helper.h  task.cpp  task.h
src/new_client/: bg_task.h  fsname.cpp  gc_file.cpp  gc_worker.h  local_key.h  segment_container.h  tair_cache_helper.cpp  tair_unique_handler.cpp  tfs_client_impl.cpp  tfs_client_impl.h  tfs_lifecycle_root_client_impl.h  tfs_meta_client_api_impl.cpp  tfs_meta_client_api_impl.h  tfs_rc_client_api_impl.h  tfs_session.cpp  tfs_session.h  tfs_session_pool.cpp  tfs_session_pool.h  tfs_unique_store.cpp
src/phpclient/: php_tfs_client.cpp
src/rcserver/: Makefile.am  app_resource.cpp  base_resource.cpp  mysql_database_helper.h  resource.h  resource_manager.h  session_manager.h
src/requester/: Makefile.am  monitor_key_rule_manager.h
src/rootserver/: build_table.cpp  meta_server_manager.cpp  meta_server_manager.h  root_server_heart_manager.cpp  root_server_heart_manager.h  rootserver.cpp  service.cpp
src/syncserver/: Makefile.am  service.cpp  ss_define.h  sync_manager.h  syncserver.cpp  syncserver.h
src/tbnet/: Makefile.am  databuffer.h  libtbnet.la  tbnet.h
src/tbnet/test/: sockettf.h
src/tbsys/: Makefile.am  Memory.hpp  Service.h  config.cpp  config.h  tblog.cpp  tblog.h  thread.h
src/tools/adminserver/: Makefile.am
src/tools/cluster/: Makefile.am  calc_ip_addr.cpp  get_diff_block.cpp  sync_analyze_tool.cpp  sync_file_base.h  sync_file_base_v2.h  sync_log.cpp  transfer_by_file.cpp  transfer_from_filesystem.cpp
src/tools/dataserver/: Makefile.am  check_super_block.cpp  convert_name.cpp  gen_block_prefix.cpp  recover_sync_file_queue.cpp  repair_used_block_count.cpp  reverse_name.cpp  view_local_key.cpp
src/tools/metaserver/: check_old_new.cpp  check_old_new_V2.cpp  dump2mysql.cpp  go_tair_for_kv.cpp  press_select.cpp  sync_nginx2kv.cpp  trans_meta.cpp  txt2newmeta.cpp  txt2newmeta_V2.cpp
src/tools/mock/: Makefile.am  mock_data_server.cpp  mock_data_server_instance.cpp  mock_data_server_instance.h
src/tools/nameserver/: Makefile.am  admintool.cpp  common.h  main.cpp  metacmp.h  performance.cpp  remote_block_cache_tool.cpp  repair_block_info.cpp  repair_file_tool.cpp  show.cpp  showssm.cpp  sync_by_file.cpp  tfstool.cpp
src/tools/rcserver/: Makefile.am
src/tools/transfer/: Makefile.am  block_console.cpp  block_console.h  block_console_v2.cpp  block_console_v2.h  compare_crc.cpp  compare_crc_v2.cpp  split_block_tool.cpp  transfer_block.cpp  transfer_block_v2.cpp  transfer_ge_dirs.cpp  transfer_logo_tool.cpp
src/tools/util/: base_worker.cpp  base_worker.h
src/tools/workers/: Makefile.am
tests/TestFrame/: PerfMain.cpp  (+1 more)
(+59 files in other folders)
